se hacen modificaciones en las imágenes según el pedido del cliente

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GMG</title>
+    <title>GMG Carpintería de aluminio</title>
 
     <!-- link fuentes google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -62,13 +62,13 @@
                           <a class="nav-link" href="paginas/similMadera.html">Simil Madera</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="paginas/lineaModena.html">Línea Modena</a>
+                            <a class="nav-link" href="paginas/lineaModena.html">Modena</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="paginas/lineaRotonda.html">Línea Rotonda</a>
+                            <a class="nav-link" href="paginas/lineaRotonda.html">Rotonda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="paginas/lineaHerrero.html">Línea Herrero</a>
+                            <a class="nav-link" href="paginas/lineaHerrero.html">Herrero</a>
                         </li>
                           <li class="nav-item">
                             <a class="nav-link" href="paginas/mamparas.html">Mamparas de Baño</a>
@@ -107,9 +107,13 @@
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 9"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9" aria-label="Slide 10"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10" aria-label="Slide 11"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="11" aria-label="Slide 12"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="4000">
+            <img src="media/carrusel/carrusel 01.jpeg" class="d-block w-100" alt="img12">
+          </div>
+          <div class="carousel-item" data-bs-interval="4000">
             <img src="media/carrusel/1.webp" class="d-block w-100" alt="img1">
           </div>
           <div class="carousel-item" data-bs-interval="4000">
@@ -199,10 +203,10 @@
               
               <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="card col" style="width: 17rem; height: 35rem; ">
-                  <img src="media/premium/0533.jpg" class="card-img-top" alt="Línea Premium">
+                  <img src="media/premium/11.jpg" class="card-img-top" alt="Línea Premium">
                   <div class="card-body">
                     <h5 class="card-title">Línea Premium</h5>
-                    <p class="card-text">La línea Módena le brinda al diseñador una gran variedad de combinaciones.</p>
+                    <p class="card-text">El sistema de alta prestación, MASS R60, es la evolución en simplicidad, diseño, funcionalidad y calidad.</p>
                     <a href="paginas/lineaPremium.html" class="btn btn-primary btn-primary-1">Conocer más</a>
                   </div>
                 </div>
