--- a/paginas/barandas.html
+++ b/paginas/barandas.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GMG</title>
+    <title>GMG Carpintería de aluminio Barandas</title>
 
     <!-- link fuentes google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +24,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
     <!-- titulo-->
-    <title>Barandas</title>
+    <title>BARANDAS</title>
   </head>
 
   <body >
@@ -61,13 +61,13 @@
                           <a class="nav-link" href="similMadera.html">Simil Madera</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="lineaModena.html">Línea Modena</a>
+                            <a class="nav-link" href="lineaModena.html">Modena</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="lineaRotonda.html">Línea Rotonda</a>
+                            <a class="nav-link" href="lineaRotonda.html">Rotonda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="lineaHerrero.html">Línea Herrero</a>
+                            <a class="nav-link" href="lineaHerrero.html">Herrero</a>
                         </li>
                           <li class="nav-item">
                             <a class="nav-link" href="mamparas.html">Mamparas de Baño</a>
@@ -95,13 +95,19 @@
         
         <section id="galeria" class="container">
               <div class="text-center pt-5">
-                  <h2>Barandas de escaleras y balcones</h2>
+                  <h2>BARANDAS DE ESCALERAS Y BALCONES</h2>
                   <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p> -->
               </div>
               <div class="row">
                   <div class="col-lg-4 col-md-6 col-sm-12">
                     <a href="../media/baranda/01.mp4" target="_blank">
                         <img src="../media/baranda/video01.jpg" alt="imagen baranda">
+                    </a>
+                  </div>
+                  
+                  <div class="col-lg-4 col-md-6 col-sm-12">
+                    <a href="../media/baranda/03.webp" target="_blank">
+                        <img src="../media/baranda/03.webp" alt="imagen baranda">
                     </a>
                   </div>
 
