--- a/paginas/lineaHerrero.html
+++ b/paginas/lineaHerrero.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GMG</title>
+    <title>GMG Carpintería de aluminio Linea Herrero</title>
 </head>
 <!-- link fuentes google -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -60,13 +60,13 @@
                         <a class="nav-link" href="similMadera.html">Simil Madera</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" href="lineaModena.html">Línea Modena</a>
+                          <a class="nav-link" href="lineaModena.html">Modena</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" href="lineaRotonda.html">Línea Rotonda</a>
+                          <a class="nav-link" href="lineaRotonda.html">Rotonda</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" href="lineaHerrero.html">Línea Herrero</a>
+                          <a class="nav-link" href="lineaHerrero.html">Herrero</a>
                       </li>
                         <li class="nav-item">
                           <a class="nav-link" href="mamparas.html">Mamparas de Baño</a>
@@ -93,7 +93,7 @@
       <!-- Galeria de fotos -->
       <section id="galeria" class="container">
         <div class="text-center pt-5">
-            <h2>Línea Herrero</h2>
+            <h2>LÍNEA HERRERO</h2>
             <p class="description">Es un sistema mediano de diseño clásico, el más tradicional en el mercado de aberturas, adaptable a todas las necesidades, 
               con un sistema de cierre central manual y tiradores laterales. 
               El sistema mediano posee un tipo de perfil que contiene menos espesor que las demás líneas, pero con la misma calidad.
@@ -147,12 +147,28 @@
                     <img src="../media/Herrero/07.jpg" alt="imagen Línea Herrero">
                 </a>
             </div>
+            
             <div class="col-lg-4 col-md-6 col-sm-12">
-                <a href="../media/Herrero/08.jpg" target="_blank">
-                    <img src="../media/Herrero/08.jpg" alt="imagen Línea Herrero">
-                </a>
-            </div>
-          </div>  
+              <a href="../media/Herrero/11.webp" target="_blank">
+                  <img src="../media/Herrero/11.webp" alt="imagen Línea Herrero">
+              </a>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12">
+              <a href="../media/Herrero/12.webp" target="_blank">
+                  <img src="../media/Herrero/12.webp" alt="imagen Línea Herrero">
+              </a>
+          </div>           
+          <div class="col-lg-4 col-md-6 col-sm-12">
+              <a href="../media/Herrero/13.webp" target="_blank">
+                  <img src="../media/Herrero/13.webp" alt="imagen Línea Herrero">
+              </a>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <a href="../media/Herrero/08.jpg" target="_blank">
+                <img src="../media/Herrero/08.jpg" alt="imagen Línea Herrero">
+            </a>
+          </div>
+        </div>  
       </section>
     </div>  
     
