--- a/paginas/lineaModena.html
+++ b/paginas/lineaModena.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>GMG</title>
+      <title>GMG Carpintería de aluminio Linea Modena</title>
 
       <!-- link fuentes google -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -61,13 +61,13 @@
                           <a class="nav-link" href="similMadera.html">Simil Madera</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="lineaModena.html">Línea Modena</a>
+                            <a class="nav-link" href="lineaModena.html">Modena</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="lineaRotonda.html">Línea Rotonda</a>
+                            <a class="nav-link" href="lineaRotonda.html">Rotonda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="lineaHerrero.html">Línea Herrero</a>
+                            <a class="nav-link" href="lineaHerrero.html">Herrero</a>
                         </li>
                           <li class="nav-item">
                             <a class="nav-link" href="mamparas.html">Mamparas de Baño</a>
@@ -97,7 +97,7 @@
           
           <section id="galeria" class="container">
                 <div class="text-center pt-5">
-                    <h2>Línea Modena 45°</h2>
+                    <h2>LÍNEA MODENA 45°</h2>
                     <p class="description">Debido a la elegancia de sus bordes suaves rectos o redondeados se puede
                       utilizar tanto en ambientes arquitectónicos de altísimo nivel como en edificios
                       residenciales o comerciales. 
@@ -122,7 +122,7 @@
                   </div>
                   <div class="col-lg-4 col-md-6 col-sm-12">
                     <a href="../media/Modena/12.jpg" target="_blank">
-                        <img src="../media/Modena/12.jpg" alt="imagen Línea Modena">
+                        <img src="../media/Modena/12.webp" alt="imagen Línea Modena">
                     </a>
                 </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
