--- a/paginas/lineaPremium.html
+++ b/paginas/lineaPremium.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <!-- Titulo -->
-      <title>GMG</title>
+      <title>GMG Carpintería de aluminio Linea Premium</title>
     
       <!-- link fuentes google -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -59,13 +59,13 @@
                           <a class="nav-link" href="similMadera.html">Simil Madera</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="lineaModena.html">Línea Modena</a>
+                            <a class="nav-link" href="lineaModena.html">Modena</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="lineaRotonda.html">Línea Rotonda</a>
+                            <a class="nav-link" href="lineaRotonda.html">Rotonda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="lineaHerrero.html">Línea Herrero</a>
+                            <a class="nav-link" href="lineaHerrero.html">Herrero</a>
                         </li>
                           <li class="nav-item">
                             <a class="nav-link" href="mamparas.html">Mamparas de Baño</a>
@@ -92,7 +92,7 @@
         <!-- Galeria de fotos -->
         <section id="galeria" class="container">
             <div class="text-center pt-5">
-                <h2>Línea Premium</h2>
+                <h2>LÍNEA PREMIUM</h2>
                 <p class="description">El sistema de alta prestación, MASS R60, es la evolución en simplicidad, diseño, funcionalidad y calidad.
                   Es un verdadero sistema integrado con soluciones globales, con una amplia gama de complementos y accesorios 
                   adaptables a cualquier situación estética, de confort, de ahorro energético y seguridad. 
@@ -101,7 +101,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-8">
-                  <a href="../media/premium/videlo01.mp4" target="_blank">
+                  <a href="../media/premium/video01.mp4" target="_blank">
                       <img src="../media/premium/video-01.jpg" alt="imagen Línea premium">
                   </a>
                 </div>
