--- a/paginas/lineaRotonda.html
+++ b/paginas/lineaRotonda.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GMG</title>
+    <title>GMG Carpintería de aluminio Linea Rotonda</title>
 
     <!-- link fuentes google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -64,13 +64,13 @@
                         <a class="nav-link" href="similMadera.html">Simil Madera</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" href="lineaModena.html">Línea Modena</a>
+                          <a class="nav-link" href="lineaModena.html">Modena</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" href="lineaRotonda.html">Línea Rotonda</a>
+                          <a class="nav-link" href="lineaRotonda.html">Rotonda</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" href="lineaHerrero.html">Línea Herrero</a>
+                          <a class="nav-link" href="lineaHerrero.html">Herrero</a>
                       </li>
                         <li class="nav-item">
                           <a class="nav-link" href="mamparas.html">Mamparas de Baño</a>
@@ -99,7 +99,7 @@
       <!-- Galeria de fotos -->
       <section id="galeria" class="container">
           <div class="text-center pt-5">
-              <h2>Línea Rotonda 640</h2>
+              <h2>LÍNEA ROTONDA 640</h2>
               <p class="description">La Serie 640 responde a las nuevas tendencias de los profesionales de la arquitectura. 
                 Su diseño de anticipación y sus terminaciones son un ejemplo de la evolución de este 
                 sistema. Delicadas formas redondas, robustez y sobriedad, visión coplanar: características 
@@ -107,6 +107,42 @@
               </p>
           </div>
           <div class="row">
+            
+            <div class="col-lg-4 col-md-6 col-sm-12">
+                  <a href="../media/rotonda/09.webp" target="_blank">
+                      <img src="../media/rotonda/09.webp" alt="imagen Línea Rotonda">
+                  </a>
+              </div>
+              <div class="col-lg-4 col-md-6 col-sm-12">
+                  <a href="../media/rotonda/10.webp" target="_blank">
+                      <img src="../media/rotonda/10.webp" alt="imagen Línea Rotonda">
+                  </a>
+              </div>
+              <div class="col-lg-4 col-md-6 col-sm-12">
+                  <a href="../media/rotonda/12.webp" target="_blank">
+                      <img src="../media/rotonda/12.webp" alt="imagen Línea Rotonda">
+                  </a>
+              </div>
+              <div class="col-lg-4 col-md-6 col-sm-12">
+                  <a href="../media/rotonda/13.webp" target="_blank">
+                      <img src="../media/rotonda/13.webp" alt="imagen Línea Rotonda">
+                  </a>
+              </div>
+              <div class="col-lg-4 col-md-6 col-sm-12">
+                  <a href="../media/rotonda/14.webp" target="_blank">
+                      <img src="../media/rotonda/14.webp" alt="imagen Línea Rotonda">
+                  </a>
+              </div>
+              <div class="col-lg-4 col-md-6 col-sm-12">
+                  <a href="../media/rotonda/15.webp" target="_blank">
+                      <img src="../media/rotonda/15.webp" alt="imagen Línea Rotonda">
+                  </a>
+              </div>
+              <div class="col-lg-4 col-md-6 col-sm-12">
+                  <a href="../media/rotonda/16.webp" target="_blank">
+                      <img src="../media/rotonda/16.webp" alt="imagen Línea Rotonda">
+                  </a>
+              </div>
               <div class="col-lg-4 col-md-6 col-sm-12">
                   <a href="../media/rotonda/01.jpg" target="_blank">
                       <img src="../media/rotonda/01.jpg" alt="imagen Línea Rotonda">
