--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GMG</title>
+    <title>GMG Carpintería de aluminio Contacto</title>
 
     <!-- link fuentes google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +25,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
     <!-- titulo-->
-    <title>Home</title>
+    <title>Contacto</title>
   </head>
 
   <body >
@@ -61,13 +61,13 @@
                           <a class="nav-link" href="similMadera.html">Simil Madera</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="lineaModena.html">Línea Modena</a>
+                            <a class="nav-link" href="lineaModena.html"> Modena</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="lineaRotonda.html">Línea Rotonda</a>
+                            <a class="nav-link" href="lineaRotonda.html"> Rotonda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="lineaHerrero.html">Línea Herrero</a>
+                            <a class="nav-link" href="lineaHerrero.html"> Herrero</a>
                         </li>
                           <li class="nav-item">
                             <a class="nav-link" href="mamparas.html">Mamparas de Baño</a>
