se hacen modificaciones en las imágenes según el pedido del cliente

--- a/paginas/lineaHerrero.html
+++ b/paginas/lineaHerrero.html
@@ -88,18 +88,18 @@
     <main>
       <!-- Nombre de la empresa y título principal -->
       <div class="container-1">
-        <h1>GMG Carpienteria de Aluminio</h1>  
+        <!-- <h1>GMG Carpienteria de Aluminio</h1>   -->
 
-      <!-- Galeria de fotos -->
-      <section id="galeria" class="container">
-        <div class="text-center pt-5">
+        <!-- Galeria de fotos -->
+        <section id="galeria" class="container">
+          <div class="text-center pt-5">
             <h2>LÍNEA HERRERO</h2>
             <p class="description">Es un sistema mediano de diseño clásico, el más tradicional en el mercado de aberturas, adaptable a todas las necesidades, 
               con un sistema de cierre central manual y tiradores laterales. 
               El sistema mediano posee un tipo de perfil que contiene menos espesor que las demás líneas, pero con la misma calidad.
             </p>
-        </div>
-        <div class="row">
+          </div>
+          <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-12">
               <a href="../media/Herrero/09.webp" target="_blank">
                   <img src="../media/Herrero/09.webp" alt="imagen Línea Herrero">
@@ -152,22 +152,22 @@
               <a href="../media/Herrero/11.webp" target="_blank">
                   <img src="../media/Herrero/11.webp" alt="imagen Línea Herrero">
               </a>
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-12">
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
               <a href="../media/Herrero/12.webp" target="_blank">
                   <img src="../media/Herrero/12.webp" alt="imagen Línea Herrero">
               </a>
-          </div>           
-          <div class="col-lg-4 col-md-6 col-sm-12">
+            </div>           
+            <div class="col-lg-4 col-md-6 col-sm-12">
               <a href="../media/Herrero/13.webp" target="_blank">
                   <img src="../media/Herrero/13.webp" alt="imagen Línea Herrero">
               </a>
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-12">
-            <a href="../media/Herrero/08.jpg" target="_blank">
-                <img src="../media/Herrero/08.jpg" alt="imagen Línea Herrero">
-            </a>
-          </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <a href="../media/Herrero/08.jpg" target="_blank">
+                  <img src="../media/Herrero/08.jpg" alt="imagen Línea Herrero">
+              </a>
+            </div>
         </div>  
       </section>
     </div>  
