--- a/paginas/lineaRotonda.html
+++ b/paginas/lineaRotonda.html
@@ -94,7 +94,7 @@
 
     <!-- Nombre de la empresa y título principal -->
     <div class="container-1">
-      <h1>GMG Carpienteria de Aluminio</h1>    
+      <!-- <h1>GMG Carpienteria de Aluminio</h1>     -->
   
       <!-- Galeria de fotos -->
       <section id="galeria" class="container">
