--- a/paginas/mamparas.html
+++ b/paginas/mamparas.html
@@ -91,7 +91,7 @@
 
         <!-- Nombre de la empresa y título principal -->
 
-        <h1>GMG Carpienteria de Aluminio</h1> 
+        <!-- <h1>GMG Carpienteria de Aluminio</h1>  -->
         
         <section id="galeria" class="container">
           <div class="text-center pt-5">
