--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -89,7 +89,7 @@
 
     <main>
       <div class="container-1">
-        <h1>GMG Carpienteria de Aluminio</h1>    
+        <!-- <h1>GMG Carpienteria de Aluminio</h1>     -->
         <h2>CONTACTOS</h2>
     
         <div class="container">
