--- a/paginas/similMadera.html
+++ b/paginas/similMadera.html
@@ -88,7 +88,7 @@
     <main>
       <!-- Nombre de la empresa y título principal -->
       <div class="container-1">
-        <h1>GMG Carpienteria de Aluminio</h1>  
+        <!-- <h1>GMG Carpienteria de Aluminio</h1>   -->
 
       <!-- Galeria de fotos -->
       <section id="galeria" class="container">
